--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,21 @@
-.navbar-brand { display: block; margin-left: auto; margin-right: auto; font-family: 'Dancing Script', cursive;}
-.navbar-toggler.fab { position: absolute; right: 10px; bottom: 10px; color: #333; background: #f5f5f5; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); height: 50px; width: 50px; border-radius: 50%; line-height: 2; }
-
-.title-container { position: relative; color: #fff; text-align: center; top: 45%; display: flex; align-items: center; justify-content: center; }
-.title-container h1 { font-size: 42px; margin: 0; font-family: 'Roboto', sans-serif; font-weight: 300; }
-.title-container h2 { font-size: 32px; margin: 0; }
-.boxed { padding: 10px 15px; background-color: rgba(0, 0, 0, 0.8); }
-.bordered { padding: 20px 40px; border: 4px double #333; border-radius: 10px; }
-.cosh { font-family: 'Montserrat', sans-serif; font-weight: 700; color: #333; }
-.lifestyle { font-family: 'Dancing Script', cursive; color: #333; }
-
-.spacer { clear: both; height: 20px; }
-
-.parallax-container { height: 400px; }
-.parallax-section { position: relative; height: 100vh; background-attachment: fixed; background-repeat: repeat; background-position: center; }
-.parallax-section.reduced { height: 60vh; background-position: center -100px; background-repeat: no-repeat; }
-.parallax-section.one { background-image: url("../img/qbkls.png"); }
-.parallax-section.two { background-image: url("../img/yeezy.jpg"); }
-.parallax-section.three { background-image: url("../img/rolex.jpg"); }
-.parallax-section.four { background-image: url("../img/travel.jpg"); }
-.parallax-section.five { background-image: url("../img/events.jpg"); }
-
-/* Center the loader */
-#loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+.homepage-bg{
+  background-image: url("../img/event_bg.jpg");
+  height: 95vh;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
 }
 
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+.event-wrapper{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
+  border: solid 2px white;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.each-event {
+  height: 300px;
 }
-
-/* Add animation to "page content" */
-.animate-bottom {
-  position: relative;
-  -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 1s;
-  animation-name: animatebottom;
-  animation-duration: 1s
-}
-
-@-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 } 
-  to { bottom:0px; opacity:1 }
-}
-
-@keyframes animatebottom { 
-  from{ bottom:-100px; opacity:0 } 
-  to{ bottom:0; opacity:1 }
-}
-
-#myDiv {
-  display: none;
-  text-align: center;
-}
-
-
-
-.footwear-page { background-image: url("../img/qbkls.png"); min-height: 6000px; }
-
-.product-card { position: relative; max-width: 300px; }
-.product-image img { border-radius: 7px; }
-.product-description { position: relative; margin: 10px 0; background-color: #fff; padding: 10px 15px; border-radius: 7px; }
-.product-description p { margin: 0; }
-.in-stock { position: absolute; top: 7px; right: 10px; background-color: #28a745; color: #fff; padding: 3px 5px; border-radius: 7px; }
-.cart-btn { position: absolute; width: 100%; padding: 10px 15px; text-align: center; border-radius: 7px }
-
-
-
-
-
-
-
-
-
