--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,22 @@
   display: flex;
 }
 
+.overlay {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(64, 64, 64, 0.3);
+}
+
+.overlay:hover{
+  background-color: rgba(64, 64, 64, 0.1);
+}
+
 .event-link {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
-  /* vertical-align: middle; */
   position: relative;
 }
 
@@ -55,8 +65,19 @@
 }
 
 .event-name-button {
-  background-color: blue;
+  background-color: rgba(80, 80, 80, 0.5);
+  width: 150px;
+  height: 40px;
+  border: 0px solid rgba(80, 80, 80, 0.9);
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 20px;
 }
+
+.event-name-button:hover {
+  background-color: rgba(80, 80, 80, 0.7);
+  color: rgba(255, 255, 255, 0.8);
+}
+
 
 
 
