--- a/css/style.css
+++ b/css/style.css
@@ -91,5 +91,61 @@
 
 
 /* footer */
-footer {background-color: grey;}
-footer .row .col-md-12 p {color: white; text-align: center; padding-top: 7px;}
+footer {background-color: #1f1f1f;}
+footer .row .col-md-4 p {color: white; text-align: center; padding-top: 7px;}
+
+.social:hover {
+     -webkit-transform: scale(1.1);
+     -moz-transform: scale(1.1);
+     -o-transform: scale(1.1);
+ }
+ .social {
+     -webkit-transform: scale(0.8);
+     /* Browser Variations: */
+
+     -moz-transform: scale(0.8);
+     -o-transform: scale(0.8);
+     -webkit-transition-duration: 0.5s;
+     -moz-transition-duration: 0.5s;
+     -o-transition-duration: 0.5s;
+ }
+
+/*
+    Multicoloured Hover Variations
+*/
+
+ #social-fb:hover {
+     color: #3B5998;
+ }
+ #social-tw:hover {
+     color: #4099FF;
+ }
+ #social-gp:hover {
+     color: #d34836;
+ }
+ #social-em:hover {
+     color: #f39c12;
+ }
+
+
+ .subscribe {
+   margin: 20px 0px;
+ }
+
+
+ h5 {
+   color: white;
+ }
+
+
+.footer-hr {
+  border-top:solid 1px #4a4a4a;
+  margin-top:30px;
+  margin-bottom:30px;
+
+}
+.footer-hr-bottom {
+    border-bottom:solid 1px #4a4a4a;
+    margin-bottom:30px;
+    margin-top: 30px;
+}
