--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,29 @@
 
 .homepage-bg{
   background-image: url("../img/event_bg.jpg");
-  height: 95vh;
+  height: 70vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-position: center;
+}
+.homepage-bg-overlay{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.42);
+
+}
+
+.homepage-bg-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.homepage-bg-text h1{
+  color: white;
+  display: flex;
 }
 
 /* text section homepage */
@@ -79,8 +96,15 @@
 }
 
 
+/* single event */
 
+.single_event_image {
+  padding:0px;
+}
 
+.single_event_image img {
+  width: 100%;
+}
 
 
 
@@ -92,8 +116,8 @@
 
 /* footer */
 footer {background-color: #1f1f1f;}
-footer .row .col-md-4 p {color: white; text-align: center; padding-top: 7px;}
-
+footer .row .col-md-4 ul {color: white; text-align: center; padding-top: 7px; list-style-type: none;}
+footer .row .col-md-4 ul li {padding-top: 10px;}
 .social:hover {
      -webkit-transform: scale(1.1);
      -moz-transform: scale(1.1);
