homepage and footer improvements. created by added

--- a/css/style.css
+++ b/css/style.css
@@ -95,17 +95,30 @@
   color: rgba(255, 255, 255, 0.8);
 }
 
-/* MORE INFO */
+/* message and location */
 
-.home-more-info {
-  padding-bottom: 50px;
+.contact-wrapper {
+  width: 100%;
+  background-color: #f5f5f5ad;
+  margin-top: 60px;
+  padding-bottom: 100px;
 }
-
 
 .home-more-info h3 {
   text-align: center;
   padding-bottom: 50px;
 }
+
+
+.message {
+  background: white !important;
+}
+
+
+
+
+
+
 
 
 /* single event */
@@ -127,7 +140,7 @@
 
 
 /* footer */
-footer {background-color: #1f1f1f; margin-top: 50px;}
+footer {background-color: #1f1f1f;}
 footer .row .col-md-4 ul {color: white; text-align: center; padding-top: 7px; list-style-type: none;}
 footer .row .col-md-4 ul li {padding-top: 10px;}
 .social:hover {
@@ -164,9 +177,9 @@ footer .row .col-md-4 ul li {padding-top: 10px;}
  }
 
 
- .subscribe {
-   margin: 20px 0px;
- }
+.social {
+  margin:5px 20px;
+}
 
 
  h5 {
